@@ -1,3 +1,7 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 6.1.2-0
+- Static asset updates for puppet 5
+- Update badges in README.md
+
 * Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.1.2-0
 - Updated $app_pki_external_source to accept any string. This matches the
   functionality of pki::copy.
